--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,32 +2,62 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body{
+  background-color: teal;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* .mealcard {
+   background-color: teal;
+} */
+.title {
+    background: -webkit-linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+/* 
+table{
+    background-color: #08AEEA;
+    background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+    border: 2px solid black;
+    padding: 10px;
+    border-collapse: collapse;
   }
+
+th, td {
+   padding: 10px;
+   text-align: left;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+td {
+    border: 2px solid black;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+tr {
+    white-space:nowrap;
+} */
+.ajza {
+    
+}
+.ajza-list {
+    display: flex;
+    list-style: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    list-style-position: inside;
+
+}
+.inger,.amo {
+    background-color: #08AEEA;
+    background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+}
+.video {
+    background-color: #08AEEA;
+    background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+}
+  .instructions {
+    background-color: #08AEEA;
+    background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
   }
-}
+
+ .click {}
